feat(auth): implement authentication module with JWT
- Added LoginRequestDTO, LoginResponseDTO and RegisterDTO for authentication flows
- Implemented AuthController with /login and /register endpoints
- Integrated ApiResponseDTO for standardized responses
- Added AuthService with login and register logic
  - login: validates credentials, generates JWT with role claim
  - register: encodes password, assigns role, persists new user
- Updated JwtProvider to generate and validate tokens with email + role
- Added password field in User entity with getter/setter
- Configured PasswordEncoder bean (BCrypt) in SecurityConfig
- Ensured proper validation annotations in authentication DTOs
- Verified login and register flows via AuthController with JWT response